* small spacing fix

--- a/assets/css/style-portum.css
+++ b/assets/css/style-portum.css
@@ -7899,6 +7899,7 @@ input[type='button']:active
             box-sizing: border-box;
     width: 50%;
     height: 26px;
+    margin-bottom: 0;
     padding: 0;
     padding-left: 20px;
 }
