--- a/assets/scss/partials/sections/_07-section-team.scss
+++ b/assets/scss/partials/sections/_07-section-team.scss
@@ -68,6 +68,7 @@
 	right:0;
 	padding-left:20px;
 	height:26px;
+	margin-bottom:0;
 	
 	li {
 		list-style-type: none;
